--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     ]
   },
   "devDependencies": {
+    "json-loader": "^0.5.7",
     "react-map-gl": "^4.1.2",
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "transform-loader": "^0.2.4",
+    "webworkify-webpack": "^1.0.6"
   }
 }
